# TwitterPoliticalAffiliation

./: Classifier.py  LICENSE  Scraper.py  main.py  pyproject.toml  train_data.csv  user-tweets.json
Algorithm/: PoliIdent.ipynb  PoliIdent_prebuilt_model.ipynb  README.md  SentimentIntro.ipynb  fixCSV.py
Algorithm/poliIdent/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Algorithm/poliIdent/variables/: variables.index
Scraper/: README.md  Scraper.py  hello.py  main.py
TweetScraper/: Classifier.py  Scraper.py  main.py  user-tweets.json
